# tokio-console-web

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  app.config.ts  app.vue  build.rs  cliff.toml  console.Dockerfile  docker-compose.yaml  envoy.yaml  example.Dockerfile  jest.config.cjs  nuxt.config.ts  package.json  pnpm-lock.yaml  release-plz.toml  renovate.json  tsconfig.json  vitest.config.ts
.github/: renovate.json5
.github/workflows/: app.yml  docker-build.yml  docker.yaml  docker.yml  main.yaml  publish.yml  release-plz.yml  release.yml  relese-please.yml  test.yml
.husky/: pre-commit
app/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  app.config.ts  app.vue  console.Dockerfile  docker-compose.yaml  nuxt.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
app/.husky/: pre-commit
app/components/: AttributesPopover.vue  CColorMode.vue  ConsoleAnchor.vue  ConsoleHeader.vue  ConsoleMenu.vue  ConsoleSettings.vue  HistogramChart.vue  LocationPopover.vue  PlayPauseButton.vue  ResourceTable.vue  SettingsCard.vue  TaskDetails.vue  TaskTable.vue  TokioSvg.vue  WarningList.vue  WarningsButton.vue  WarningsSlideover.vue
app/composables/: asyncOps.ts  grpcClient.ts  resources.ts  state.ts  tasks.ts  updateStream.ts  warnings.ts
app/histogram/: Cargo.toml
app/histogram/pkg/: histogram_bg.wasm
app/histogram/src/: lib.rs
app/pages/resources/: index.vue
app/public/: subscriber.json
app/stores/: settings.ts
app/tests/components/: consoleAnchor.nuxt.spec.ts  consoleHeader.nuxt.spec.ts  consoleMenu.nuxt.spec.ts  resourceDetails.nuxt.spec.ts  settingsCard.nuxt.spec.ts  taskDetails.nuxt.spec.ts  taskTable.nuxt.spec.ts  warningList.nuxt.spec.ts  warningsButton.nuxt.spec.ts  warningsSlideover.nuxt.spec.ts
app/tests/components/__snapshots__/: asyncOpsTable.nuxt.spec.ts.snap  consoleAnchor.nuxt.spec.ts.snap  consoleHeader.nuxt.spec.ts.snap  consoleMenu.nuxt.spec.ts.snap  resourceDetails.nuxt.spec.ts.snap  resourceTable.nuxt.spec.ts.snap  taskDetails.nuxt.spec.ts.snap  taskTable.nuxt.spec.ts.snap  warningList.nuxt.spec.ts.snap
app/tests/unit/: asyncOp.test.ts  duration.test.ts  field.test.ts  tokioResource.test.ts
app/types/: resourceBasicInfo.ts  resourceTableItem.ts  taskBasicInfo.ts  taskTableItem.ts  timesDetails.ts  warningItem.ts
app/types/asyncOp/: asyncOpStats.ts
app/types/common/: duration.ts  field.ts  metadata.ts
app/types/task/: tokioTask.ts  tokioTaskDetails.ts  tokioTaskStats.ts
app/types/warning/: neverYielded.ts  warn.ts  warning.ts
app/types/warning/taskWarnings/: neverYielded.ts  selfWakePercent.ts
components/: AsyncOpsTable.vue  CHeader.vue  ConsoleAnchor.vue  ConsoleHeader.vue  ConsoleMenu.vue  FieldsPopover.vue  HistogramChart.vue  ResourceDetails.vue  ResourceTable.vue  SettingsCard.vue  TaskDetails.vue  TaskInfoField.vue  TaskTable.vue  TasksTable.vue  TokioLogo.vue  WarningList.vue  WarningsSlideover.vue
composables/: asyncOps.ts  duration.ts  durationWithStyle.ts  resources.ts  state.ts  task.ts  tasks.ts  updateStream.ts  useGrpcClient.ts  useTasks.ts
composables/task/: duration.ts  taskData.ts  tokioTask.ts  tokioTaskDetails.ts  tokioTaskStats.ts
examples/: grpc_web.rs
histogram/: Cargo.toml
histogram/src/: lib.rs
pages/: index.vue
pages/resources/: [id].vue
pages/tasks/: [id].vue
src/: main.rs
tests/: cli-ui.rs  cli-ui.toml
tests/components/: asyncOpsTable.nuxt.spec.ts  consoleAnchor.nuxt.spec.ts  consoleHeader.nuxt.spec.ts  createTask.ts  infoField.nuxt.spec.ts  resourceDetails.nuxt.spec.ts  resourceTable.nuxt.spec.ts  settingsCard.nuxt.spec.ts  taskDetails.nuxt.spec.ts  taskInfoField.nuxt.spec.ts  taskTable.nuxt.spec.ts  tasksTable.nuxt.spec.ts
tests/components/__snapshots__/: asyncOpsTable.nuxt.spec.ts.snap  consoleAnchor.nuxt.spec.ts.snap  consoleHeader.nuxt.spec.ts.snap  consoleMenu.nuxt.spec.ts.snap  infoField.nuxt.spec.ts.snap  resourceDetails.nuxt.spec.ts.snap  resourceTable.nuxt.spec.ts.snap  taskDetails.nuxt.spec.ts.snap  taskInfoField.nuxt.spec.ts.snap  taskTable.nuxt.spec.ts.snap  tasksTable.nuxt.spec.ts.snap
tests/composables/: duration.test.ts
tests/unit/: asyncOp.test.ts  asyncOpStats.test.ts  duration.test.ts  task.test.ts  tokioResource.test.ts  tokioResourceStats.test.ts  tokioTask.test.ts  tokioTaskStats.test.ts
types/: asyncOpTableItem.ts  durationWithStyle.ts  resourceBasicInfo.ts  resourceTableItem.ts  taskBasicInfo.ts  taskTableItem.ts  timesDetails.ts  warningItem.ts
types/asyncOp/: asyncOp.ts  asyncOpStats.ts
types/common/: duration.ts  durationWithStyle.ts  field.ts  metadata.ts
types/resource/: tokioResource.ts  tokioResourceStats.ts
types/task/: tokioTask.ts  tokioTaskDetails.ts  tokioTaskStats.ts
types/warning/: warn.ts
types/warning/taskWarnings/: lostWaker.ts
utils/: index.ts
wix/: main.wxs
